# ParallelHorner

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  main.cpp  pHorner.hpp  pHorner_tests.cpp  partitioners.hpp  utils.h
